--- a/index.html
+++ b/index.html
@@ -2,74 +2,76 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Your Title Here</title>
+  <title>Planetary Facts</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>Planetary Fact Sheet</h1>
-  <table id="planets">
-    <tr>
-      <th></th>
-      <th>Planet 1</th>
-      <th>Planet 2</th>
-      <th>Planet 3</th>
-      <th>Planet 4</th>
-    </tr>
-    <tr>
-      <td>Images of ??</td>
-      <td><img src="images/planet_1.png" alt="?"></td>
-      <td><img src="images/planet_2.png" alt="?"></td>
-      <td><img src="images/planet_3.png" alt="?"></td>
-      <td><img src="images/planet_4.png" alt="?"></td>
-    </tr>
-    <tr>
-      <td>Fact #1</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-    </tr>
-    <tr>
-      <td>Fact #2</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-    </tr>
-    <tr>
-      <td>Fact #3</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-    </tr>
-    <tr>
-      <td>Fact #4</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-    </tr>
-    <tr>
-      <td>Fact #5</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-    </tr>
-    <tr>
-      <td>Fact #6</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-    </tr>
-    <tr>
-      <td>Fact #7</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-    </tr>
-  </table>
+    <header>
+        <h1 id="main-title">Planetary Facts: A Comparison of Mercury, Venus, Earth, and Mars</h1>
+        <p class="subtitle">Discover how these four planets differ in size, distance from the Sun, and other key metrics.</p>
+    </header>
+
+    <section>
+        <table id="planet-table">
+            <thead>
+                <tr>
+                    <th>Planet</th>
+                    <th>Mass (10^24 kg)</th>
+                    <th>Diameter (km)</th>
+                    <th>Distance from Sun (10^6 km)</th>
+                    <th>Gravity (m/s²)</th>
+                    <th>Length of Day (hours)</th>
+                    <th>Orbital Period (days)</th>
+                    <th>Surface Temperature (°C)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="planet-row">
+                    <td>Mercury</td>
+                    <td>0.330</td>
+                    <td>4,879</td>
+                    <td>57.9</td>
+                    <td>3.7</td>
+                    <td>4222.6</td>
+                    <td>88</td>
+                    <td>167</td>
+                </tr>
+                <tr class="planet-row">
+                    <td>Venus</td>
+                    <td>4.87</td>
+                    <td>12,104</td>
+                    <td>108.2</td>
+                    <td>8.9</td>
+                    <td>2802.0</td>
+                    <td>224.7</td>
+                    <td>464</td>
+                </tr>
+                <tr class="planet-row">
+                    <td>Earth</td>
+                    <td>5.97</td>
+                    <td>12,742</td>
+                    <td>149.6</td>
+                    <td>9.8</td>
+                    <td>24.0</td>
+                    <td>365.2</td>
+                    <td>15</td>
+                </tr>
+                <tr class="planet-row">
+                    <td>Mars</td>
+                    <td>0.642</td>
+                    <td>6,779</td>
+                    <td>227.9</td>
+                    <td>3.7</td>
+                    <td>24.6</td>
+                    <td>687</td>
+                    <td>-65</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+    
+    <footer>
+        <p class="footer-text">Data Source: NASA Planetary Fact Sheet</p>
+    </footer>
 </body>
+</html>
